crates/vize_atelier_vapor/tests/level_vapor_upstream_parity/snapshots/level_vapor_upstream_parity__dynamic_slots__dynamic_outlet_call.snap
---
source: crates/vize_atelier_vapor/tests/davinci_vapor_upstream_parity/dynamic_slots.rs
expression: compiled.code
---
import { createSlot as _createSlot, child as _child, next as _next, txt as _txt, toDisplayString as _toDisplayString, setText as _setText, setInsertionState as _setInsertionState, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<b data-id=\"fallback\"> </b>")
const t1 = _template("<main data-id=\"root\"><!----><i data-id=\"tail\"> </i></main>", true)

export function render(_ctx) {
  const n1 = t1()
  const n2 = _child(n1)
  const n4 = _next(_child(n1))
  const x4 = _txt(n4)
  _setInsertionState(n1, n2)
  const n0 = _createSlot(() => (_ctx.selected.toLowerCase()), { value: () => (_ctx.value) }, () => {
    const n3 = t0()
    const x3 = _txt(n3)
    _renderEffect(() => _setText(x3, _toDisplayString(_ctx.fallback)))
    return n3
  })
  _renderEffect(() => _setText(x4, _toDisplayString(_ctx.tail)))
  return n1
}
